# twitch_reader

./: .clang-format  .gitignore  CMakeLists.txt  README.md  clang_format.sh
cmake_modules/: FindAsio.cmake
include/: binary_find.hpp  color.hpp  command_type_list.hpp  convert.hpp  message.hpp  message_parser.hpp  twitch_chat_reader.hpp  twitch_message.hpp
libs/twitch/: CMakeLists.txt
libs/twitch/include/twitch/: twitch_message.hpp
libs/twitch/libs/color/: CMakeLists.txt
libs/twitch/libs/irc/: CMakeLists.txt
libs/twitch/libs/irc/include/irc/: command_type_list.hpp  message.hpp
libs/twitch/libs/irc/libs/binary_find/: CMakeLists.txt
libs/twitch/libs/irc/src/: message_parser.cpp
libs/twitch/libs/irc/test/: CMakeLists.txt  irc_test.cpp
libs/twitch/src/: twitch_message.cpp
src/: color.cpp  main.cpp  message.cpp  message_parser.cpp  twitch_chat_reader.cpp
src/irc/: CMakeLists.txt  message.cpp
test/: CMakeLists.txt  irc_test.cpp
